// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScreenConsumer lifecyle render context 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    Width 
    200
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    Height 
    200
  </Text>
</View>
`;

exports[`ScreenConsumer lifecyle should re-render the component on updates 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    Width 
    4000
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    Height 
    2000
  </Text>
</View>
`;
